<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >

    <item android:id="@+id/inicio"
        android:title="@string/inicio"
        app:showAsAction="always"
        android:icon="@drawable/ic_home_black_24dp"

        />

    <item android:id="@+id/addIdeiaicon"
        android:title="@string/adicionar_curso"
        android:icon="@drawable/ic_add_black_24dp"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"

        />
    <item
        android:title="@string/perfil"
        android:icon="@drawable/ic_person_black_24dp"
        android:id="@+id/perfil"
        app:showAsAction="always"/>
    <item
        android:title="@string/sair"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:id="@+id/sair"
        app:showAsAction="always"/>

</menu>