<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Cadastro_Usuario"
    android:background="@drawable/backgroudlogin"

    >

    <ImageView
        android:id="@+id/logoSalvum"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:adjustViewBounds="false"
        android:cropToPadding="true"
        android:src="@mipmap/ic_logosalvum"
        app:layout_constraintBottom_toBottomOf="@id/topoCadUsuario"
        app:layout_constraintEnd_toEndOf="@+id/topoCadUsuario"
        app:layout_constraintStart_toStartOf="@+id/topoCadUsuario"
        app:layout_constraintTop_toTopOf="@id/topoCadUsuario"
        android:elevation="500dp"
        android:layout_marginBottom="40dp"
         />




    <View
        android:id="@+id/topoCadUsuario"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/retcomp"
        android:elevation="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastro_de_usuario"
        app:layout_constraintEnd_toEndOf="@+id/topoCadUsuario"
        app:layout_constraintBottom_toBottomOf="@+id/topoCadUsuario"
        android:layout_marginEnd="20dp"
        android:elevation="600dp"
        android:textSize="18sp"
        android:layout_marginBottom="20dp"
        android:textColor="#777777"


        />

    <EditText
        android:id="@+id/barNomeCadUse"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:ems="10"
        android:text="@string/nome"
        android:textColor="#777777"
        android:padding="10dp"
        android:background="@drawable/bartext"
        app:layout_constraintTop_toBottomOf="@+id/topoCadUsuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/barMatriculaCadUsuario"
         />

    <EditText
        android:id="@+id/barMatriculaCadUsuario"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/matricula"
        android:textColor="#777777"
        android:padding="10dp"
        android:background="@drawable/bartext"
        app:layout_constraintTop_toBottomOf="@id/barNomeCadUse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/barTelefoneCadUsuario"
     />

    <EditText
        android:id="@+id/barTelefoneCadUsuario"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="phone"
        android:text="@string/telefone"
        android:background="@drawable/bartext"
        android:textColor="#777777"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/barMatriculaCadUsuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/barEmailCadUsuario"
         />

    <EditText
        android:id="@+id/barEmailCadUsuario"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:ems="10"
        android:text="@string/email"
        android:textColor="#777777"
        android:background="@drawable/bartext"
        android:padding="10dp"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/barTelefoneCadUsuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/barSenhaCadUsuario"
         />

    <EditText
        android:id="@+id/barSenhaCadUsuario"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:ems="10"
        android:text="@string/senha"
        android:textColor="#777777"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/barEmailCadUsuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnCadUsuario"
        android:background="@drawable/bartext"
        android:padding="10dp"
         />

    <Button
        android:id="@+id/btnCadUsuario"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@drawable/btnverde"
        android:text="@string/cadastrar_se"
        android:textColor="#ffffff"
        app:layout_constraintTop_toBottomOf="@id/barSenhaCadUsuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
         />


</androidx.constraintlayout.widget.ConstraintLayout>