<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/backgroudlogin"

    >
    <ImageView
        android:id="@+id/logoSalvum"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:adjustViewBounds="false"
        android:cropToPadding="true"
        android:src="@mipmap/ic_logosalvum"
        app:layout_constraintBottom_toBottomOf="@id/topoLogin"
        app:layout_constraintEnd_toEndOf="@+id/topoLogin"
        app:layout_constraintStart_toStartOf="@+id/topoLogin"
        app:layout_constraintTop_toTopOf="@id/topoLogin"
        android:elevation="500dp"
        android:layout_marginBottom="40dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="#777777"
        android:elevation="1000dp"
        app:layout_constraintEnd_toEndOf="@+id/topoLogin"
        app:layout_constraintBottom_toBottomOf="@+id/topoLogin"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="30dp"
        android:textSize="24sp"
        />
    <View
        android:id="@+id/topoLogin"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/retcomp"
        />

    <EditText
        android:id="@+id/barMatTelaLogin"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColor="#777777"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/topoLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/barSenhaTelaLogin"
        android:background="@drawable/bartext"
        android:layout_marginTop="50dp"
         />

    <EditText
        android:id="@+id/barSenhaTelaLogin"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:textColor="#777777"
        android:hint="@string/senha"
        app:layout_constraintTop_toBottomOf="@+id/barMatTelaLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnEntrarTelaLogin"
        android:background="@drawable/bartext"
        android:padding="10dp"
        android:layout_marginBottom="100dp"
        />

    <Button
        android:id="@+id/btnEntrarTelaLogin"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/entrar"
        android:textColor="#ffffff"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barSenhaTelaLogin"
        app:layout_constraintBottom_toTopOf="@+id/txtRegistreTelaLogin"
        android:background="@drawable/btnverde"
     />

    <TextView
        android:id="@+id/txtRegistreTelaLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registre_se"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEntrarTelaLogin"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/esqueci_minha_senha"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="@+id/barSenhaTelaLogin"
        app:layout_constraintTop_toBottomOf="@+id/barSenhaTelaLogin"
        tools:layout_editor_absoluteX="285dp"
        tools:layout_editor_absoluteY="356dp" />


</androidx.constraintlayout.widget.ConstraintLayout>