<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_AddCurso"
    android:background="#241178"

    >

    <ImageView
        android:id="@+id/logoSalvum"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:adjustViewBounds="false"
        android:cropToPadding="true"
        android:src="@mipmap/ic_logosalvum"
        app:layout_constraintBottom_toBottomOf="@id/topoAddCurso"
        app:layout_constraintEnd_toEndOf="@+id/topoAddCurso"
        app:layout_constraintStart_toStartOf="@+id/topoAddCurso"
        app:layout_constraintTop_toTopOf="@id/topoAddCurso"
        android:elevation="500dp"
        android:layout_marginBottom="40dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/criar_cursos"
        android:textColor="#777777"
        android:elevation="1000dp"
        app:layout_constraintEnd_toEndOf="@+id/topoAddCurso"
        app:layout_constraintBottom_toBottomOf="@+id/topoAddCurso"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="30dp"
        android:textSize="24sp"
        />

    <View
        android:id="@+id/topoAddCurso"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/retcomp"
        android:elevation="3dp"
        />

    <EditText
        android:id="@+id/barTituloAddCurso"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:ems="18"
        android:hint="@string/titulo"
        android:textColor="#777777"
        app:layout_constraintTop_toBottomOf="@+id/topoAddCurso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/barSobreAddCurso"
        android:background="@drawable/bartext"
        android:padding="10dp"

         />

    <EditText
        android:id="@+id/barSobreAddCurso"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:ems="10"
        android:background="#ffffff"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@+id/barTituloAddCurso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/barTagsAddCurso"

         />


    <EditText
        android:id="@+id/barTagsAddCurso"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:ems="18"
        android:hint="@string/curso"
        android:textColor="#777777"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/barSobreAddCurso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnCriarAddCurso"
        android:background="@drawable/bartext"
     />

    <Button
        android:id="@+id/btnCriarAddCurso"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@drawable/btnverde"
        android:text="@string/criar"
        android:textColor="#ffffff"
        app:layout_constraintTop_toBottomOf="@id/barTagsAddCurso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
         />

</androidx.constraintlayout.widget.ConstraintLayout>