<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Perfil"
    android:background="@drawable/backgroudlogin"
    >


    <TextView
        android:id="@+id/nomePerfil"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/matriculaPerfil"
        android:layout_marginTop="50dp"

        />

    <TextView
        android:id="@+id/matriculaPerfil"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/matricula"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomePerfil"
         />

    <TextView
        android:id="@+id/txtcursosApoiando"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/cursos_apoaiados"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/recyclerCursosApoiando"
        app:layout_constraintBottom_toTopOf="@id/recyclerCursosApoiando"

         />
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerCursosApoiando"
         android:layout_width="330dp"
         android:layout_height="300dp"
         android:background="#ffffff"
         app:layout_constraintTop_toBottomOf="@id/matriculaPerfil"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/recyclercursosCriados"
         />
    <TextView
        android:id="@+id/txtcursosCriados"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Cursos Criados"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/recyclercursosCriados"
        app:layout_constraintBottom_toTopOf="@id/recyclercursosCriados"

        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclercursosCriados"
        android:layout_width="330dp"
        android:layout_height="200dp"
        android:background="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerCursosApoiando"
         />

</androidx.constraintlayout.widget.ConstraintLayout>